--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
@@ -20,9 +21,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^1.0.0"
-   
   },
-  
   "eslintConfig": {
     "extends": [
       "react-app",
